--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git - GitHub</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <h1>Sofia</h1>
-    <p>Hola Bienvenido a mi biografía, les indicare algunas cosas sobre mi</p>
-    <img src="../image/kitty.jpg" alt="Kitty">
+    <div class="main"><h1>Sofia</h1>
+        <p>Hola Bienvenido a mi biografía, les indicare algunas cosas sobre mi</p>
+        <img src="../image/kitty.jpg" alt="Kitty">
+        <p>MI comida favorita es el ceviche de camarones</p></div>
+    
 </body>
 </html>
